# NL-to-Regex-Data

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  large_test.csv  manage.py  pyproject.toml
backend/llmtoregex/: apps.py  input_validation.py  literal_validation.py  regex_validation.py  services.py  tasks.py  test_task_progress.py  tests.py  tests_integration.py  urls.py  views.py
backend/nltoregex/: asgi.py  cache_utils.py  celery.py  observability.py  task_progress.py  urls.py  wsgi.py
backend/nltoregex/settings/: base.py  local.py  test.py
backend/scripts/: entrypoint-web.sh  entrypoint-worker.sh  generate_large_csv.py
backend/uploads/: admin.py  excel_reader.py  file_reader.py  health.py  identifiers.py  metrics.py  models.py  result_reader.py  services.py  tasks.py  test_metrics.py  tests.py  urls.py  views.py
backend/uploads/migrations/: 0001_initial.py  0002_uploadedfile_saved_filename.py  0003_job_row_progress.py  0004_alter_job_id_alter_uploadedfile_id.py  0005_alter_job_id_alter_uploadedfile_id.py  0006_job_transform_type.py  0007_alter_job_id_alter_uploadedfile_id.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: http.js  jobs.js  queryKeys.js  uploads.js
frontend/src/constants/: transformTypes.js
frontend/src/theme/: theme.js
frontend/src/utils/: columns.js  format.js
(+8 files in other folders)
